--- a/zotero.bib
+++ b/zotero.bib
@@ -3330,6 +3330,23 @@
   file = {/Users/juniorgarcia/Zotero/storage/L9PTAVVZ/Strohmeier - 2016 - Exploring Bodies, Mediation and Points of View usi.pdf}
 }
 
+@online{suarezNeuralMMOMassively2019,
+  title = {Neural {{MMO}}: {{A Massively Multiagent Game Environment}} for {{Training}} and {{Evaluating Intelligent Agents}}},
+  shorttitle = {Neural {{MMO}}},
+  author = {Suarez, Joseph and Du, Yilun and Isola, Phillip and Mordatch, Igor},
+  date = {2019-03-02},
+  eprint = {1903.00784},
+  eprinttype = {arxiv},
+  eprintclass = {cs, stat},
+  doi = {10.48550/arXiv.1903.00784},
+  url = {http://arxiv.org/abs/1903.00784},
+  urldate = {2024-05-14},
+  abstract = {The emergence of complex life on Earth is often attributed to the arms race that ensued from a huge number of organisms all competing for finite resources. We present an artificial intelligence research environment, inspired by the human game genre of MMORPGs (Massively Multiplayer Online Role-Playing Games, a.k.a. MMOs), that aims to simulate this setting in microcosm. As with MMORPGs and the real world alike, our environment is persistent and supports a large and variable number of agents. Our environment is well suited to the study of large-scale multiagent interaction: it requires that agents learn robust combat and navigation policies in the presence of large populations attempting to do the same. Baseline experiments reveal that population size magnifies and incentivizes the development of skillful behaviors and results in agents that outcompete agents trained in smaller populations. We further show that the policies of agents with unshared weights naturally diverge to fill different niches in order to avoid competition.},
+  pubstate = {preprint},
+  keywords = {agents,Computer Science - Machine Learning,Computer Science - Multiagent Systems,rl,Statistics - Machine Learning},
+  file = {/Users/juniorgarcia/Documents/repos/PhD-ing/literature/Suarez et al_2019_Neural MMO.pdf;/Users/juniorgarcia/Zotero/storage/HPRHDTXX/1903.html}
+}
+
 @article{sulerOnlineDisinhibitionEffect2004,
   title = {The Online Disinhibition Effect},
   author = {Suler, John},
